{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "64bf3634-e45c-4d76-9c81-2faacdddb625",
            "actions": [
                {
                    "name": "Grow",
                    "type": "Button",
                    "id": "7aca438a-ab23-4751-bb92-b12c7522b413",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a03e2368-5fa7-4b4e-8e8a-899dd15146fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "8d7af719-64b4-4a30-a282-d67a64f9dfdb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b4bfd0e-abb0-495a-83b3-becf73c8d8f6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5342bf7e-0a28-4171-b61e-25e9791dd4e7",
                    "path": "<DualSenseGamepadHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e41f6809-cce3-496f-a360-e9535ef5e477",
                    "path": "<DualSenseGamepadHID>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}